--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,9 @@ requirements:
     - pyarrow >=3.0.0
     - db-dtypes >=0.3.0,<2.0.0dev
 
+    # Debugging protobuf issue
+    - protobuf >=5.28.3 
+
 test:
   imports:
     - dbt.adapters.bigquery
