--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,11 +31,11 @@ requirements:
 
     # from google-cloud-bigquery[pandas]
     - pandas >=1.1.0
-    # - pyarrow >=3.0.0
-    # - db-dtypes >=0.3.0,<2.0.0dev
+    - pyarrow >=3.0.0
+    - db-dtypes >=0.3.0,<2.0.0dev
 
     # Debugging protobuf issue
-    - protobuf >=5.28.3 
+    - protobuf <5.28.3 
 
 test:
   imports:
