--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,8 @@ requirements:
   host:
     - python {{ python_min }}
     - pip
-    - setuptools
+    - hatchling
   run:
-    - google-auth >=2.29.0
-    - google-cloud-aiplatform >=1.72.0
-    - nbformat >=5.10.4
     - python >={{ python_min }}
     - dbt-common >=1.10,<2.0
     - dbt-adapters >=1.16,<2.0
@@ -30,7 +27,10 @@ requirements:
     - google-cloud-storage >=2.4,<3.2
     - google-cloud-dataproc >=5.0,<6.dev0
     - google-api-core >=2.11.0
+    - google-auth >=2.29.0
     - dbt-core >=1.10.0rc0
+    - nbformat >=5.10.4
+    - google-cloud-aiplatform >=1.72.0
 
 test:
   imports:
