--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,7 @@ about:
   home: https://github.com/dbt-labs/dbt-bigquery
   summary: The BigQuery adapter plugin for dbt
   license: Apache-2.0
-  license_file: LICENSE.md
+  license_file: LICENSE
 
 extra:
   recipe-maintainers:
